[package]
name = "skeg-rigging-net-http"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "HTTP saga-distribution side-channel for hansa peers. Sync server (tiny_http) + sync client (ureq)."
keywords = ["skeg", "rigging", "http", "saga", "federation"]
categories = ["network-programming", "web-programming::http-server"]
readme = "../../README.md"

[dependencies]
skeg-rigging = { workspace = true }
skeg-rigging-net = { path = "../skeg-rigging-net", version = "0.1.0" }
bytes = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tiny_http = "0.12"
ureq = { version = "2", default-features = false, features = ["json"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
